assets/styles/main.sass
  
html
  background: $color-white

.subtitle
  margin-bottom: 1rem
  font-family: 'Space Bold'
  text-transform: uppercase
  font-size: 0.9166rem
  line-height: 1.28
.title
  margin-bottom: 1rem
  font-family: 'Space Medium'
  line-height: 1.28
.paragraph
  margin-bottom: 4rem
  line-height: 1.6

.page
  position: relative
  display: flex
  flex-direction: column
  height: 100%
  width: 100%
  min-height: 100vh

header
  position: fixed
  left: 50%
  top: env(safe-area-inset-top, 0)
  transform: translateX(-50%)
  width: 100%
  max-width: calc(1440px + 4rem)
  z-index: +1
  padding: 1rem 2rem 0 2rem
  @media screen and ( max-width: $breakpoint-mobile)
    padding: 1rem 1rem 0 1rem
  margin-left: auto
  margin-right: auto

.header
  position: relative
  border: $border-width solid currentColor
  background: $color-white
  color: black
  text-transform: none
  font-family: Space SemiBold
  font-size: 1.33rem
  line-height: 1
  border-radius: $border-radius

.webgl
  position: fixed
  left: 0
  top: 0
  right: 0
  background: $color-white
  border-radius: $border-radius
  flex-grow: 1
  height: 100vh

.btn-Container
  width: 100%
  display: flex
  justify-content: center
  &_Vertical
    flex-direction: column
    align-items: center
    & > div 
      margin-bottom: 2rem
      &:last-child
        margin-bottom: 0

